[package]
name = "sktg"
version = "0.3.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.9", features = ["macros", "auto-send"] }

log = "0.4"
env_logger = "0.9"

anyhow = "1.0"
chrono = "0.4"
reqwest = "0.11"

[patch.crates-io]
teloxide-macros = { git = "https://github.com/SandaruKasa/teloxide-macros.git" }
