[workspace]
members = [".", "entity", "migration"]

[package]
name = "sktg"
version = "0.4.0-pre2"
edition = "2021"
license = "AGPL-3"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.9", default-features = false, features = [
  "macros",
  "auto-send",
  "ctrlc_handler",
] }
sea-orm = { version = "0.8", default-features = false, features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
] }

log = "0.4"
env_logger = "0.9"

anyhow = "1.0"
lazy_static = "1.4"

chrono = "0.4"
reqwest = "0.11"

[patch.crates-io]
teloxide-macros = { git = "https://github.com/SandaruKasa/teloxide-macros.git" }
